sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:3: error: not found: value getNombreValeurs
  val lgr=getNombreValeurs()
          ^DutchFlagAlgo:5: error: not found: value getValeur
    var vTemp=getValeur(pivot)
              ^DutchFlagAlgo:7: error: not found: value getValeur
    while(pTemp>=0 && getValeur(pTemp)>vTemp){copie(pTemp,pTemp+1);pTemp-=1}
                      ^DutchFlagAlgo:7: error: not found: value copie
    while(pTemp>=0 && getValeur(pTemp)>vTemp){copie(pTemp,pTemp+1);pTemp-=1}
                                              ^DutchFlagAlgo:8: error: not found: value setValeur
    setValeur(pTemp+1,vTemp)
    ^